# SeavoExplorer

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  OHMYPI.md  README.md  README.txt  build_onedir.py  build_onefile.py  build_support.py  fix_all.py  grep_regex.py  main.py  main.spec  make_ico.py  patch.py  patch_final.py  patch_show_hidden.py  pyproject.toml  release.py  release_notes.md  requirements-build.txt  requirements.txt  test_regex.py  test_safety.py  test_tooling.py  verify_fixes.py  verify_multiselect.py  打包指南.txt
