[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SeavoExplorer"
version = "0.5.1"
description = "主板项目文件浏览器 — 用于浏览以 S/M 编号命名的硬件/PCB 项目文件夹"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "FengBujue0104" },
]
keywords = ["pyqt5", "file-browser", "pcb", "hardware", "s-m-projects"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/FengBujue0104/SeavoExplorer"
Repository = "https://github.com/FengBujue0104/SeavoExplorer"
Issues = "https://github.com/FengBujue0104/SeavoExplorer/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
